optimization and seeder
